WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316185
PlatformTimeRanges::containWithEpsilon checks the wrong delta for inter-range gaps
https://bugs.webkit.org/show_bug.cgi?id=316185
Summary
PlatformTimeRanges::containWithEpsilon checks the wrong delta for inter-range...
Chris Dumez
Reported
2026-06-02 23:44:19 PDT
PlatformTimeRanges::containWithEpsilon checks the wrong delta for inter-range gaps
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-06-02 23:46:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66350
EWS
Comment 2
2026-06-04 16:41:30 PDT
Committed
314592@main
(55c079f8c2ad): <
https://commits.webkit.org/314592@main
> Reviewed commits have been landed. Closing PR #66350 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-04 16:42:14 PDT
<
rdar://problem/178769444
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug